--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>CSS circular progress bar</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="circularprogress.css"/>
     <style>
         .example {
@@ -42,7 +43,7 @@
     </div>
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
     <script src="circularprogress.jquery.js"></script>
     <script>
         $(document).ready(function(){
